charts/data-service/stress-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: stress-pod
  namespace: app
spec:
  containers:
  - name: stress
    image: polinux/stress
    args: ["--cpu", "2", "--vm", "1", "--vm-bytes", "128M", "--vm-hang", "1"]
    resources:
      limits:
        memory: "256Mi"
        cpu: "500m"
      requests:
        memory: "128Mi"
        cpu: "250m"
