charts/data-service/data-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-service
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: data
  template:
    metadata:
      labels:
        app: data
    spec:
      containers:
      - name: data
        image: hashicorp/http-echo
        args:
          - "-text=Hello from data-service"
        ports:
        - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: data-service
  namespace: app
spec:
  selector:
    app: data
  ports:
  - port: 80
    targetPort: 5678
